<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Equations">

    <LinearLayout
        android:layout_weight="10"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="EQUATIONS"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:fadeScrollbars="true"
        android:background="#ffffff"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="6dp"
        android:background="@drawable/borderlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="CIRCLE"/>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/cirle"/>
    </LinearLayout>
            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="cone"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/cone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="cube"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/cube"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="cylinder"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/cylinder"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="hexagon"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/hexagonex"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="prism"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/prism"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="right triangle"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/righttriangle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="sphere"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/sphere"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="squre"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/squre"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="trapezium"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/trapezium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:background="@drawable/borderlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="triangle"/>
                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:text="@string/triangle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

